--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-# More details on how to configure the Travis build
-# https://docs.travis-ci.com/user/customizing-the-build/
-
 # Speed up build with travis caches
 cache:
   directories:
@@ -8,7 +5,6 @@ cache:
 
 language: java
 
-#TODO why do we need below?
 before_install:
   - export TRAVIS_COMMIT_MESSAGE=$(git log --format=%B -n 1 $TRAVIS_COMMIT)
   - echo "$TRAVIS_COMMIT_MESSAGE"
@@ -16,7 +12,6 @@ before_install:
 jdk:
   - oraclejdk8
 
-#TODO why do we need below?
 env:
   global:
   - TERM=dumb
@@ -31,8 +26,8 @@ branches:
 install:
  - true
 
-script:
-  - ./gradlew build -s
+#script:
+#  - ./gradlew build -s
 
 after_success:
   - ./gradlew assertReleaseNeeded && ./gradlew ciReleasePrepare && ./gradlew performRelease -Pshipkit.dryRun=false
