--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ branches:
 
 #build and test the release logic
 script:
-  - ./gradlew build testRelease -s -i
+  - ./gradlew build -s -i
 
 #check release criteria and make release if criteria are met!
 after_success:
-  - ./gradlew assertReleaseNeeded && ./gradlew ciReleasePrepare && ./gradlew travisRelease
+  - ./gradlew assertReleaseNeeded && ./gradlew ciReleasePrepare && ./gradlew performRelease
