--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,13 @@ buildscript {
         mavenLocal()
         maven { url "https://plugins.gradle.org/m2/" }
     }
+
+    dependencies {
+        classpath "org.shipkit:shipkit:0.8.110"
+    }
 }
+
+apply plugin: "org.shipkit.java"
 
 allprojects {
 
